--- a/html/payment.html
+++ b/html/payment.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../Resources/themes/innerTheme/HomePage.css"/>
     <link rel="stylesheet" href="../Resources/themes/main/jquery.mobile.icons.min.css"/>
     <link rel="stylesheet" href="../css/main.css"/>
+    <link rel="stylesheet" href="../css/stripe.css"/>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css"/>
 
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -28,27 +29,53 @@
         </button>
     </div>
 
-    <div class="navbar-header" data-role="navbar">
-        <!-- /navbar -->
-        <ul>
-            <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Food</a></li>
-            <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Fashion</a></li>
-            <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Games</a></li>
-            <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Manga</a></li>
-        </ul>
-    </div>
+
     <div role="main" class="favourites ui-content">
+        <script src="https://js.stripe.com/v3/"></script>
+        <form>
+            <label>
+                <span>Name</span>
+                <input name="cardholder-name" placeholder="Jane Doe" />
+            </label>
+            <label>
+                <span>Email</span>
+                <input  placeholder="(123) 456-7890" type="email" />
+            </label>
+            <label>
+                <span>Address Line 1</span>
+                <input name="address-line1" placeholder="94110" />
+            </label>
+            <label>
+                <span>Address Line 2</span>
+                <input name="address-line2" placeholder="94110" />
+            </label>
+            <label>
+                <span>State</span>
+                <input name="address-state" placeholder="94110" />
+            </label>
+            <label>
+                <span>Sity</span>
+                <input name="address-city" placeholder="94110" />
+            </label>
+            <label>
+                <span>ZIP code</span>
+                <input name="address-zip" placeholder="94110" />
+            </label>
+            <label>
+                <span>Card</span>
+                <div id="card-element" class="field"></div>
+            </label>
+            <button type="submit">Pay $ <span id="price">25</span></button>
+        </form>
 
-        <div class="loader">
-            <img class="loader-gif" src="./../Resources/images/giphy.gif">
-            <p> The goodest bois are loading your card details</p>
-        </div>
-        <div class="main products-items">
 
 
+        <br>
+        <br>
+        <br>
+        <br>
 
 
-        </div>
     </div>
 
     <div class="page-footer footer-class" data-role="footer"
@@ -90,6 +117,7 @@
 <script type="text/javascript" src="../js/CategoryProducts.js"></script>
 <script type="text/javascript" src="../js/Categories.js"></script>
 <script type="text/javascript" src="../js/main.js"></script>
+<script type="text/javascript" src="../js/stripe.js"></script>
 
 <script>
     $("#page-content").on("swiperight", function (e) {
